# libgattsrv

./: .gitignore  configure.ac
include/: Gobbledegook.h
src/: DBusMethod.h  DBusObject.cpp  DosellGatt.cpp  DosellGatt.h  GattCharacteristic.cpp  GattDescriptor.cpp  GattInterface.h  Globals.h  Gobbledegook.cpp  HciAdapter.cpp  HciAdapter.h  Init.cpp  Makefile.am  ServerUtils.cpp  standalone.cpp
